# aoc15-hs

./: README.md  aoc15-hs.cabal
.devcontainer/: devcontainer.json
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Lib.hs
